--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "1.4.0",
     "debug": "2.2.0",
     "express": "4.13.3",
+    "express-fingerprint": "^1.1.0",
     "express-jwt-permissions": "^0.5.0",
     "joi": "6.7.1",
     "lodash.assign": "3.2.0",
