--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.13.3",
     "express-fingerprint": "^1.1.0",
     "express-jwt-permissions": "^0.5.0",
+    "ipware": "^1.0.0",
     "joi": "6.7.1",
     "lodash.assign": "3.2.0",
     "lodash.omit": "3.1.0",
