--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash.uniq": "3.2.2",
     "ms": "^0.7.2",
     "node-uuid": "1.4.3",
+    "redis": "^2.6.5",
     "request": "2.63.0",
     "v8-profiler": "5.5.0"
   },
